added contig_query_matcher and exonerate scripts

--- a/config.yaml
+++ b/config.yaml
@@ -1,10 +1,11 @@
 subjects:
-  csp: subjects/csp.fasta
-  gonium: subjects/gonium.fasta
+  csp: data/subjects/csp.fasta
+  gonium: data/subjects/gonium.fasta
 queries:
-  actin: queries/actin.faa
-  beta_tubulin2: queries/beta_tubulin2.faa
+  actin: data/queries/actin.faa
+  beta_tubulin2: data/queries/beta_tubulin2.faa
 
 blast_evalue: 1e-4
 left_addendum: 10000
 right_addendum: 10000
+exonerate_percentage: 70
