--- a/config.yaml
+++ b/config.yaml
@@ -5,13 +5,13 @@ queries:
   proteins1: data/queries/proteins1.faa
   proteins2: data/queries/proteins2.faa
 
-blast_evalue: 1e-4
-left_addendum: 100000
-right_addendum: 100000
-exonerate_percentage: 20
-blosum: 45
-pam: 200
-cd_hit_threshold: 95
-sim_threshold: 50
-properties: $HOME/.jalview_properties
-threads: 8
+blast_evalue: {num}
+left_addendum: {num}
+right_addendum: {num}
+exonerate_percentage: {num}
+blosum: {num}
+pam: {num}
+id_threshold: {num}
+sim_threshold: {num}
+properties: {path}
+threads: {num}
