--- a/config.yaml
+++ b/config.yaml
@@ -11,7 +11,8 @@ right_addendum: 10000
 exonerate_percentage: 10
 blosum: 45
 pam: 200
-identity: 1
+hssp_distance: 5
+similarity: 0
 overlap_percentage: 80
 properties: $HOME/.jalview_properties
 threads: 4
