fixed id_sim bug and formats

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,10 @@
 subjects:
-  csp: data/subjects/csp.fna
+  #csp: data/subjects/csp.fna
+  cre: data/subjects/cre.fna
 queries:
   actin: data/queries/actin.faa
   beta_tubulin2: data/queries/beta_tubulin2.faa
-  cre_photoreceptors: data/queries/cre_photoreceptors.faa
+  #cre_photoreceptors: data/queries/cre_photoreceptors.faa
 
 evalue: 1e-4
 left_addendum: 10000
@@ -11,7 +12,7 @@ right_addendum: 10000
 exonerate_percentage: 10
 blosum: 45
 pam: 200
-hssp_distance: 10.5
+hssp_distance: 5
 similarity: 0
 overlap_percentage: 50
 properties: $HOME/.jalview_properties
