--- a/config.yaml
+++ b/config.yaml
@@ -15,7 +15,7 @@ pam: 200
 stop_at_stop: 1
 len_cutoff: 50
 hssp_distance: 5
-similarity: 0
+identity_threshold: 30
 filter_met: 1
 overlap_percentage: 50
 properties: $HOME/.jalview_properties
